fix: code overflow on small screens; style: border radius for codeblock

--- a/app/globals.css
+++ b/app/globals.css
@@ -66,6 +66,12 @@
   }
 }
  
+@media (max-width: 720px) {
+  pre {
+    width: calc(100vw - 110px);
+  }
+}
+
 @layer base {
   * {
     @apply border-border;
